--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -31,7 +31,7 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4.2.2
       - name: Install dependencies
-        run: apt-get update && apt-get install -y makepkg
+        run: sudo apt install -y makepkg
       - name: Prepare build
         run: ./prepare_build_test.sh
       - name: Debug check build folder
