--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -42,7 +42,7 @@ jobs:
         uses: addnab/docker-run-action@v3
         with:
           image: docker.io/archlinux:latest
-          options: -v ./repo:/repo
+          options: -v "./repo:/repo"
           run: |
             cd /repo
             repo-add linux-zz.db.tar.zst *.pkg.tar.zst
