--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -42,9 +42,9 @@ jobs:
         uses: addnab/docker-run-action@v3
         with:
           image: docker.io/archlinux:latest
-          options: -v "./repo:/repo"
+          options: -v ${{ github.workspace }}:/workspace
           run: |
-            cd /repo
+            cd /workspace/repo
             repo-add linux-zz.db.tar.zst *.pkg.tar.zst
       - name: Release packages
         uses: ncipollo/release-action@v1.16.0
