--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -36,7 +36,7 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4.2.2
       - name: Build build container
-        run: docker build -t linux-zz-builder -f Containerfile
+        run: docker build -t linux-zz-builder -f Containerfile .
       - name: Create output directory
         run: mkdir ./output
       - name: Build kernel
