--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -28,11 +28,10 @@ jobs:
     environment: Release
 
     steps:
-      # - name: Free up more disk space
-      #   uses: jlumbroso/free-disk-space@main
-      #   with:
-      #     tool-cache: true
-      #     docker-images: false
+      - name: Free up more disk space
+        uses: jlumbroso/free-disk-space@main
+        with:
+          tool-cache: true
       - name: Checkout code
         uses: actions/checkout@v4.2.2
       - name: Build build container
