--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -4,7 +4,7 @@ on:
     paths:
       - '**.sh'
       - '.github/workflows/**'
-  schedule:
+  # schedule:
     # - cron: "4 2 * * *"
   workflow_dispatch: ~
 
